# barlas

./: CMakeLists.txt  README.md  package.xml
docs/: DAILY_TEST_PROCEDURE.md  DETAILED_SETUP.md  GAZEBO_SETUP.md  WSL_ROS_SETUP.md
launch/: sensors.launch  simulation.launch  system.launch
raspberry_pi/: README.md  requirements.txt  sensor_manager.py
rviz/: sensors.rviz
src/: advanced_camera_test.py  dart_recognition.py  data_collector.py  debug_digit.py  demo_dart_detection.py  digit_recognizer.py  digit_recognizer_v2.py  direct_test.py  hough_circle.py  ktr_interface.py  lidar_node.py  mission_controller.py  ml_pipeline.py  model_trainer.py  motor_driver.py  obstacle_avoidance.py  pan_tilt_controller.py  pid_controller.py  simple_camera_test.py  system_test.py  tabela_recognition.py  test_camera.py  test_hough_circle.py  test_manual_tabela.py  test_motor_driver.py  test_pan_tilt.py  test_pid.py  test_tabela_recognition.py  trained_digit_recognizer.py  ultrasonic_node.py  webcam_free_test.py  webcam_tabela_test.py
src/barlas_control/src/: px4_control_node.py
src/barlas_sensor_interface/: CMakeLists.txt  README.md  package.xml
src/barlas_sensor_interface/launch/: sensors.launch
src/barlas_sensor_interface/src/: sensor_interface_node.py
src/dart_laser_system/: HARDWARE_SETUP.md  INSTALLATION_GUIDE.md  QUICK_START.md  README.md  README2.md  README_Arduino.md  TROUBLESHOOTING.md  __init__.py  arduino_controller.py  arduino_dart_system.py  arduino_firmware_kontrol.md  arduino_pantilt.ino  arduino_simulation.py  camera_servo_alignment.md  camera_test.py  dart_detector.py  dart_laser_targeting.py  demo_dart_laser.py  hibrit_kontrol_sistemi.md  install_linux.sh  install_windows.ps1  laser_calibration.py  laser_controller.py  linux_setup_test.sh  requirements.txt  sistem_calisma_mantigi.md  targeting_system.py  test_system.py  yolo_arduino_dart_system.py
src/dart_laser_system/ros_nodes/: CMakeLists.txt  README_ROS.md  dart_laser_ros_node.py  package.xml  ros_test_script.py  servo_controller_ros_node.py
src/dart_laser_system/ros_nodes/launch/: dart_laser_system.launch
src/dart_laser_system/ros_nodes/rviz/: dart_laser_viz.rviz
src/dart_recognize/: 02_predictions.ipynb  data.yaml  yolo_predictions.ipynb  yolo_predictions.py
src/dart_recognize/.ipynb_checkpoints/: 02_predictions-checkpoint.ipynb  yolo_predictions-checkpoint.ipynb  yolo_predictions-checkpoint.py
src/dart_recognize/Model/: events.out.tfevents.1752656042.28235ffbf40a.1745.0  events.out.tfevents.1752704148.b5bf806adc52.7431.0  opt.yaml  results.csv
src/navigation/: __init__.py
src/sensors/: __init__.py  battery_sensor.py  imu_sensor.py  lidar_manager.py  obstacle_avoidance.py  temperature_sensor.py  test_battery.py  test_imu.py  test_lidar.py  test_sensors.py  test_temperature.py  ultrasonic_manager.py
