<?xml version="1.0"?>
<package format="2">
  <name>barlas</name>
  <version>0.1.0</version>
  <description>BARLAS robot control package</description>
  <maintainer email="myy16@gmail.com">Barlas Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
