<?xml version="1.0"?>
<package format="2">
    <name>barlas_dart_laser</name>
    <version>1.0.0</version>
    <description>BARLAS Dart Laser Targeting System - ROS Package</description>

    <maintainer email="barlas@example.com">BARLAS Team</maintainer>
    <license>MIT</license>

    <url type="website">https://github.com/myy16/barlas</url>
    <url type="bugtracker">https://github.com/myy16/barlas/issues</url>
    <url type="repository">https://github.com/myy16/barlas</url>

    <author email="barlas@example.com">BARLAS Team</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>usb_cam</build_depend>
    <build_depend>tf2_ros</build_depend>

    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>usb_cam</build_export_depend>
    <build_export_depend>tf2_ros</build_export_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>usb_cam</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>python3-opencv</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-yaml</exec_depend>

    <export>
    </export>
</package>
